--- a/html/test.html
+++ b/html/test.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .box {
+            
+        }
+    </style>
 </head>
 <body>
-    <!-- <script type="module" src="../node_modules/path/path.js"></script> -->
-    <script src="./main.js"></script>
+    <div class="box"></div>
 </body>
 </html>
